--- a/base/index.html
+++ b/base/index.html
@@ -28,8 +28,7 @@
                 <div class="right"></div>
               </div>
             </div>
-            <div class="tail">
-            </div>
+            <div class="tail"></div>
           </div>
     </body>
 </html>
